@@ -168,7 +168,8 @@ boost::intrusive_ptr<T> clone_ptr(boost::intrusive_ptr<T> const& ptr)
 	return boost::intrusive_ptr<T>(new T(*ptr));
 }
 
-boost::intrusive_ptr<torrent_info> create_torrent(std::ostream* file, int piece_size, int num_pieces)
+boost::intrusive_ptr<torrent_info> create_torrent(std::ostream* file, int piece_size
+	, int num_pieces, bool add_tracker)
 {
 	char const* tracker_url = "http://non-existent-name.com/announce";
 	// excercise the path when encountering invalid urls
@@ -179,9 +180,12 @@ boost::intrusive_ptr<torrent_info> create_torrent(std::ostream* file, int piece_
 	int total_size = piece_size * num_pieces;
 	fs.add_file("temporary", total_size);
 	libtorrent::create_torrent t(fs, piece_size);
-	t.add_tracker(tracker_url);
-	t.add_tracker(invalid_tracker_url);
-	t.add_tracker(invalid_tracker_protocol);
+	if (add_tracker)
+	{
+		t.add_tracker(tracker_url);
+		t.add_tracker(invalid_tracker_url);
+		t.add_tracker(invalid_tracker_protocol);
+	}
 
 	std::vector<char> piece(piece_size);
 	for (int i = 0; i < int(piece.size()); ++i)
@@ -221,7 +225,7 @@ setup_transfer(session* ses1, session* ses2, session* ses3
 	assert(ses1);
 	assert(ses2);
 
-	session_settings sess_set;
+	session_settings sess_set = ses1->settings();
 	sess_set.allow_multiple_connections_per_ip = true;
 	sess_set.ignore_limits_on_local_network = false;
 	ses1->set_settings(sess_set);
@@ -251,7 +255,7 @@ setup_transfer(session* ses1, session* ses2, session* ses3
 		error_code ec;
 		create_directory("./tmp1" + suffix, ec);
 		std::ofstream file(("./tmp1" + suffix + "/temporary").c_str());
-		t = ::create_torrent(&file, piece_size, 19);
+		t = ::create_torrent(&file, piece_size, 19, true);
 		file.close();
 		if (clear_files)
 		{
@@ -335,6 +339,151 @@ setup_transfer(session* ses1, session* ses2, session* ses3
 	return boost::make_tuple(tor1, tor2, tor3);
 }
 
+boost::asio::io_service* tracker_ios = 0;
+boost::shared_ptr<libtorrent::thread> tracker_server;
+libtorrent::mutex tracker_lock;
+libtorrent::condition tracker_initialized;
+
+bool udp_failed = false;
+
+void stop_tracker()
+{
+	if (tracker_server && tracker_ios)
+	{
+		tracker_ios->stop();
+		tracker_server->join();
+		tracker_server.reset();
+		tracker_ios = 0;
+	}
+}
+
+void udp_tracker_thread(int* port);
+
+int start_tracker()
+{
+	stop_tracker();
+
+	{
+		mutex::scoped_lock l(tracker_lock);
+		tracker_initialized.clear(l);
+	}
+
+	int port = 0;
+
+	tracker_server.reset(new libtorrent::thread(boost::bind(&udp_tracker_thread, &port)));
+
+	{
+		mutex::scoped_lock l(tracker_lock);
+		tracker_initialized.wait(l);
+	}
+	test_sleep(100);
+	return port;
+}
+
+void on_udp_receive(error_code const& ec, size_t bytes_transferred, udp::endpoint const* from, char* buffer, udp::socket* sock)
+{
+	if (ec)
+	{
+		fprintf(stderr, "UDP tracker, read failed: %s\n", ec.message().c_str());
+		return;
+	}
+
+	udp_failed = false;
+
+	if (bytes_transferred < 16)
+	{
+		fprintf(stderr, "UDP message too short\n");
+		return;
+	}
+	char* ptr = buffer;
+	boost::uint64_t connection_id = detail::read_uint64(ptr);
+	boost::uint32_t action = detail::read_uint32(ptr);
+	boost::uint32_t transaction_id = detail::read_uint32(ptr);
+
+	error_code e;
+
+	switch (action)
+	{
+		case 0: // connect
+
+			ptr = buffer;
+			detail::write_uint32(0, ptr); // action = connect
+			detail::write_uint32(transaction_id, ptr); // transaction_id
+			detail::write_uint64(10, ptr); // connection_id
+			sock->send_to(asio::buffer(buffer, 16), *from, 0, e);
+			break;
+
+		case 1: // announce
+
+			ptr = buffer;
+			detail::write_uint32(1, ptr); // action = announce
+			detail::write_uint32(transaction_id, ptr); // transaction_id
+			detail::write_uint32(1800, ptr); // interval
+			detail::write_uint32(1, ptr); // incomplete
+			detail::write_uint32(1, ptr); // complete
+			// 0 peers
+			sock->send_to(asio::buffer(buffer, 20), *from, 0, e);
+			break;
+		default: // ignore scrapes
+			break;
+	}
+}
+
+void udp_tracker_thread(int* port)
+{
+	io_service ios;
+	udp::socket acceptor(ios);
+	error_code ec;
+	acceptor.open(udp::v4(), ec);
+	if (ec)
+	{
+		fprintf(stderr, "Error opening listen UDP socket: %s\n", ec.message().c_str());
+		mutex::scoped_lock l(tracker_lock);
+		tracker_initialized.signal(l);
+		return;
+	}
+	acceptor.bind(udp::endpoint(address_v4::any(), 0), ec);
+	if (ec)
+	{
+		fprintf(stderr, "Error binding UDP socket to port 0: %s\n", ec.message().c_str());
+		mutex::scoped_lock l(tracker_lock);
+		tracker_initialized.signal(l);
+		return;
+	}
+	*port = acceptor.local_endpoint().port();
+
+	tracker_ios = &ios;
+
+	fprintf(stderr, "UDP tracker initialized on port %d\n", *port);
+
+	{
+		mutex::scoped_lock l(tracker_lock);
+		tracker_initialized.signal(l);
+	}
+
+	char buffer[2000];
+
+	for (;;)
+	{
+		error_code ec;
+		udp::endpoint from;
+		udp_failed = true;
+		acceptor.async_receive_from(
+			asio::buffer(buffer, sizeof(buffer)), from, boost::bind(
+				&on_udp_receive, _1, _2, &from, &buffer[0], &acceptor));
+		ios.run_one(ec);
+		if (udp_failed) return;
+
+		if (ec)
+		{
+			fprintf(stderr, "Error receiving on UDP socket: %s\n", ec.message().c_str());
+			mutex::scoped_lock l(tracker_lock);
+			tracker_initialized.signal(l);
+			return;
+		}
+		ios.reset();
+	}
+}
 
 boost::asio::io_service* web_ios = 0;
 boost::shared_ptr<libtorrent::thread> web_server;
@@ -555,6 +704,20 @@ void web_server_thread(int* port, bool ssl)
 			{
 				send_response(s, ec, 301, "Moved Permanently", "Location: ../test_file\r\n", 0);
 				break;
+			}
+
+			if (path.substr(0, 9) == "/announce")
+			{
+				entry announce;
+				announce["interval"] = 1800;
+				announce["complete"] = 1;
+				announce["incomplete"] = 1;
+				announce["peers"].string();
+				std::vector<char> buf;
+				bencode(std::back_inserter(buf), announce);
+			
+				send_response(s, ec, 200, "OK", 0, buf.size());
+				write(s, boost::asio::buffer(&buf[0], buf.size()), boost::asio::transfer_all(), ec);
 			}
 
 //			fprintf(stderr, ">> serving file %s\n", path.c_str());
